# RayTracer

./: .gitignore  CMakeLists.txt  README.MD
example/: CMakeLists.txt  main.cpp
include/: Camera.h  Image.h  Renderer.h  Scene.h
src/: CMakeLists.txt  aabb.h  bvhtree.cpp  bvhtree.h  config.h  image.cpp  intersection.h  light.h  material.cpp  material.h  model.cpp  model.h  object.h  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  texture.cpp  texture.h  triangle.h  util.h
